@@ -1,12 +1,26 @@
 <?php
 $language = array (
+  'widgets:discussion:settings:group_only' => 'Toon alleen discussies uit je eigen groepen',
+  'widgets:discussion:more' => 'Bekijk meer discussies',
+  'widgets:discussion:description' => 'Toont de laatste discussies',
+  'widgets:index_groups:description' => 'Toon de laatste groepen uit de community',
+  'widgets:index_groups:featured' => 'Toon enkel aangeraden groepen',
+  'widgets:group_news:settings:group_icon_size' => 'Groep icoon grootte',
+  'widgets:group_news:settings:group_icon_size:small' => 'Klein',
+  'widgets:group_news:settings:group_icon_size:medium' => 'Middel',
+  'widgets:group_news:title' => 'Groep nieuws',
+  'widgets:group_forum_topics:description' => 'Toon de laatste discussies',
+  'widgets:group_news:description' => 'Toont de laatste 5 blogs van verschillende groepen',
+  'widgets:group_news:no_projects' => 'Geen groepen geconfigureerd',
+  'widgets:group_news:no_news' => 'Geen blogs voor deze groep',
+  'widgets:group_news:settings:project' => 'Groep',
+  'widgets:group_news:settings:no_project' => 'Selecteer een groep',
+  'widgets:group_news:settings:blog_count' => 'Max aantal blogs',
   'group_tools:group:invite:friends:select_all' => 'Selecteer alle vrienden',
   'group_tools:group:invite:friends:deselect_all' => 'Deselecteer alle vrienden',
   'group_tools:group:invite:users:all' => 'Nodig alle site gebruikers uit voor deze groep',
   'widgets:featured_groups:description' => 'Toont een lijst met willekeurig geselecteerde aangeraden groepen',
   'widgets:featured_groups:edit:show_random_group' => 'Toon een willekeurige niet aangeraden groep',
-  'widgets:index_discussions:description' => 'Toon de laatste groep discussies',
-  'widgets:index_discussions:more' => 'Bekijk meer discussies',
   'group_tools:joinrequest:already' => 'Lidmaatschap verzoek intrekken',
   'group_tools:joinrequest:already:tooltip' => 'Je hebt reeds verzocht lid te worden van deze groep, klik hier om dit verzoek in te trekken',
   'group_tools:menu:invitations' => 'Beheer uitnodigingen',
