@@ -1,0 +1,21 @@
+.widget_group_news_navigator {
+	border-top: 1px dotted #CCCCCC;
+	padding-top: 5px;
+	text-align: center;
+}
+
+.widget_group_news_navigator > span {
+	border: 1px solid #CCCCCC;
+	cursor: pointer;
+	padding: 2px 4px;
+	margin: 0 2px;
+}
+
+.widget_group_news_navigator > span.active,
+.widget_group_news_navigator > span:hover {
+	background: #CCCCCC;
+}
+
+.widget_group_news_navigator > span.active {
+	cursor: auto;
+}
