@@ -1,6 +1,11 @@
 = Version History =
 x.x:
 
+- added: discussion widget from widget manager
+- added: group_forum_topics widget from widget manager
+- added: group_news widget from widget manager
+- added: index_groups widget from widget manager
+- removed: index_discussions widget
 - fixed: depricated notice in invitations overview
 - fixed: url error in invitation
 
